Empty SVG viewbox should be treated invalid

If SVG viewbox is explicitly empty, it should be
treated as invalid value.

BUG=608413

Review-Url: https://codereview.chromium.org/2037573002
Cr-Commit-Position: refs/heads/master@{#397735}

Former-commit-id: 7d1027c45036b7da5389faa99e3b54209398a3c1